# 02445_project_work

./: .gitignore  Output_28625931.err  README.md  download_models.py  generate.py  generate_one.py  gpucheck.py  labels_assertive.csv  labels_assertive.xlsx  labels_bossy.csv  labels_bossy.xlsx  labels_control.xlsx  labels_ditzy.csv  labels_ditzy.xlsx  labels_emotional.xlsx  labels_irrational.csv  main.py  pyproject.toml  run_all.sh  submit.sh
FLUX.1-schnell-GGUF/: .gitattributes  README.md
Project_work/: Data_preprocessing.ipynb  Workbook.ipynb  statistics.ipynb
Project_work/Data/: dataset_cleaned.csv  labels_control.csv  labels_emotional.csv  labels_hysterical.csv  labels_loose.csv  labels_passionate.csv  labels_sexually_confident.csv  labels_silly.csv
gender-classification/: README.md  config.json
stable-diffusion-v1-5-GGUF/: .gitattributes  stable-diffusion-v1-5-pruned-emaonly-Q4_0.gguf
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/: generate_images.py
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/ggml/docs/: gguf.md
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/ggml/scripts/: sync-llama.last  sync-whisper.last
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/ggml/tests/: test-backend-ops.cpp
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/outputs/: metadata.csv
stable-diffusion-v1-5-GGUF/stable-diffusion.cpp/outputs/batch_003/: metadata.csv
