[project]
name = "02445-project-work"
version = "0.1.0"
description = "Project work for course 02445 at DTU Statistical evaluation of AI learning models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.7",
    "stable-diffusion-cpp-python>=0.2.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
