[project]
name = "02445-project-work"
version = "0.1.0"
description = "Project work for course 02445 at DTU Statistical evaluation of AI learning models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
